# promptorium-c

./: .gitignore  Makefile  README.md  makefile  meson.build
conf/: promptorium.conf  promptorium.conf.json
shell/: promptorium_init.sh
src/: .clang-format  main  main.c  main.h
src/modules/: module.c  module.h
src/modules/application/: application-modules.h  application.c  application.h
src/modules/application/cleanup/: cleanup.c  cleanup.h
src/modules/application/cleanup-memory/: cleanup-memory.c  cleanup-memory.h
src/modules/application/get-prompt/: get-prompt.c  get-prompt.h
src/modules/application/init-config/: init-config.c  init-config.h
src/modules/application/load-config/: load-config.c  load-config.h
src/modules/application/print-help/: print-help.c  print-help.h
src/modules/application/print-prompt/: _build-prompt.c  _build-prompt.h  print-prompt.c  print-prompt.h
src/modules/application/print-version/: print-version.c  print-version.h
src/modules/application/prompt/: prompt.c  prompt.h
src/modules/common/: common-modules.h  definitions.h
src/modules/common/colors/: colors.c  colors.h
src/modules/common/config-management/: config-management.c  config-management.h
src/modules/common/error-management/: error-management.c  error-management.h
src/modules/load-config/: load-config.c  load-config.h
src/modules/print-help/: print-help.c  print-help.h
src/modules/print-version/: print-version.h
src/modules/status-handling/: status-handling.c  status-handling.h
src/testfunc/: testfunc.c  testfunc.h
(+14 files in other folders)
